--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,6 +19,7 @@
         <script src="https://unpkg.com/react@16.2.0/umd/react.production.min.js"></script>
         <script src="https://unpkg.com/react-dom@16.2.0/umd/react-dom.production.min.js"></script>
         {% endif %}
+        <script src="https://unpkg.com/react-autosuggest@9.3.2/dist/standalone/autosuggest.min.js"></script>
         <script src="{{ url_for('static', filename='App.jsx') }}" type="text/babel"></script>
     </body>
 </html>
