--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
     <head>
         {% if title %}
         <title>{{ title }} - equivtracker</title>
@@ -8,18 +9,76 @@
         {% endif %}
         <link href="https://use.fontawesome.com/releases/v5.0.2/css/all.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css" />
+        <style>
+            .react-autosuggest__container {
+                position: relative;
+            }
+
+            .react-autosuggest__input {
+                height: 30px;
+                padding: 5px 10px;
+            }
+
+            .react-autosuggest__input--focused {
+                outline: none;
+            }
+
+            .react-autosuggest__input--open {
+                border-bottom-left-radius: 0;
+                border-bottom-right-radius: 0;
+            }
+
+            .react-autosuggest__suggestions-container {
+                display: none;
+                height: 200px;
+            }
+
+            .react-autosuggest__suggestions-container--open {
+                display: block;
+                position: absolute;
+                top: 40px;
+                width: 160px;
+                border: 1px solid #aaa;
+                background-color: #fff;
+                font-family: Helvetica, sans-serif;
+                font-weight: 300;
+                font-size: 16px;
+                border-bottom-left-radius: 4px;
+                border-bottom-right-radius: 4px;
+                z-index: 2;
+            }
+
+            .react-autosuggest__suggestions-list {
+                margin: 0;
+                padding: 0;
+                list-style-type: none;
+                height: 200px;
+                overflow-y: auto;
+            }
+
+            .react-autosuggest__suggestion {
+                cursor: pointer;
+                padding: 10px 20px;
+            }
+
+            .react-autosuggest__suggestion--highlighted {
+                background-color: #ddd;
+            }
+        </style>
     </head>
+
     <body>
         {% block content %}{% endblock %}
         <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
         {% if config['DEBUG'] %}
         <script src="https://unpkg.com/react@16.2.0/umd/react.development.js"></script>
-        <script src="https://unpkg.com/react-dom@16.2.0/umd/react-dom.development.js"></script>
+        <script crossorigin src="https://unpkg.com/react-dom@16.2.0/umd/react-dom.development.js"></script>
         {% else %}
         <script src="https://unpkg.com/react@16.2.0/umd/react.production.min.js"></script>
         <script src="https://unpkg.com/react-dom@16.2.0/umd/react-dom.production.min.js"></script>
         {% endif %}
-        <script src="https://unpkg.com/react-autosuggest@9.3.2/dist/standalone/autosuggest.min.js"></script>
+        <script crossorigin src="https://unpkg.com/react-autosuggest@9.3.2/dist/standalone/autosuggest.min.js"></script>
         <script src="{{ url_for('static', filename='App.jsx') }}" type="text/babel"></script>
     </body>
+
 </html>
