--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,6 +2,8 @@
 <html>
 
     <head>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         {% if title %}
         <title>{{ title }} - equivtracker</title>
         {% else %}
@@ -10,6 +12,14 @@
         <link href="https://use.fontawesome.com/releases/v5.0.2/css/all.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css" />
         <style>
+            @media only screen and (max-width: 500px) {
+                table {
+                    display: block;
+                    overflow-x: auto;
+                    white-space: nowrap;
+                }
+            }
+
             .react-autosuggest__container {
                 position: relative;
             }
